# scriptmate

./: .env.example  .gitignore  Makefile  README.md  README.zh-CN.md  config.example.toml  pyproject.toml
data/: demo_library_metadata.csv  keyword_mapping.json
data/card_templates/: atlas_bullet_card.html  atlas_data_card.html  atlas_title_card.html  bullet_card.html  data_card.html  quote_card.html  title_card.html
docs/: 2026-07-17-universal-skill-design.md  architecture.md  config.md  deployment.md  library-format.md  prompt-spec.md  usage.md  variants.md
docs/superpowers/plans/: 2026-07-17-universal-skill-sync.md
scripts/: bootstrap.sh
skills/scriptmate/: SKILL.md
skills/scriptmate/scripts/: bootstrap.sh  scriptmate.sh
src/cmm/: __init__.py  aspect.py  cache.py  cli.py  config.py  exceptions.py  logging.py  models.py  pipeline.py  scorer.py
src/cmm/analyzer/: __init__.py  base.py  llm_analyzer.py
src/cmm/assembler/: __init__.py  base.py  capcut.py
src/cmm/cards/: __init__.py  chart_renderer.py  context_builder.py  renderer.py
src/cmm/fetcher/: __init__.py  base.py  coverr.py  downloader.py  fallback.py  nasa.py  pexels.py  pixabay.py  query_planner.py  stock_search.py
src/cmm/outputs/: __init__.py  html_review.py  labels.py  report.py  writer.py
tests/: test_analyzer.py  test_chart_renderer.py  test_cli.py  test_config.py  test_downloader.py  test_http.py  test_library_index.py  test_pipeline.py  test_providers.py  test_ranker.py  test_report.py  test_review_html.py  test_scorer.py  test_skill_package.py  test_stock_search.py
(+8 files in other folders)
